--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon src/index.js",
+    "debug": "nodemon src/index.js --inspect",
     "build": "sucrase ./src -d ./dist --transforms imports"
   },
   "devDependencies": {
